Added logging to the service layer